compiler/testData/diagnostics/tests/testsWithExplicitApi/inlineClasses.kt
// FIR_IDENTICAL
// DIAGNOSTICS: -EXPERIMENTAL_FEATURE_WARNING
// LANGUAGE: -JvmInlineValueClasses
// SKIP_TXT

<!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>inline class Value1<!>(<!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>val inner<!>: Int)
public inline class Value2(<!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>val inner<!>: Int)
<!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>inline class Value3<!>(public val inner: Int)
public inline class Value4(public val inner: Int)
